# srd

./: .bazelrc  .clang-format  .clangd  .gitignore  Jenkinsfile  MODULE.bazel  README  WORKSPACE.bazel
.github/workflows/: ci.yml
apps/hello/: BUILD.bazel  main.cc
include/: BUILD.bazel
include/srd/: greeter.h  status.hpp
include/srd/common/: io.hpp
include/srd/record/: field.hpp  tuple.hpp
include/srd/storage/: slotted_page.hpp  storage_manager.hpp
src/common/: BUILD.bazel  greeter.cc
src/record/: BUILD.bazel  field.cc  tuple.cc
src/storage/: BUILD.bazel  slotted_page.cc  storage_manager.cc
tests/: BUILD.bazel  greeter_test.cc
tests/record/: BUILD.bazel  field_test.cc  tuple_test.cc
tests/storage/: BUILD.bazel  slotted_page_test.cc  storage_manager_test.cc
