cc_library(
    name = "slotted_page",
    srcs = ["slotted_page.cc"],
    deps = [
        "//include:srd_headers",
        "//src/record:record",
        "@spdlog//:spdlog",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "storage_manager",
    srcs = ["storage_manager.cc"],  
    hdrs = [],
    deps = [
        "//include:srd_headers",
        "//src/storage:slotted_page", 
        "@spdlog//:spdlog",
    ],
    visibility = ["//visibility:public"], 
)