cc_test(
    name = "slotted_page_test",
    srcs = ["slotted_page_test.cc"],
    deps = [
        "//include:srd_headers",
        "//src/record:record",
        "//src/storage:slotted_page",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "storage_manager_test",
    srcs = ["storage_manager_test.cc"],
    deps = [
        "@googletest//:gtest_main",
        "//src/storage:slotted_page",
        "//src/storage:storage_manager",
        "//include:srd_headers",
    ],
)